--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=sort" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Document</title>
 </head>
 
@@ -16,9 +16,7 @@
         <div class="screen home-screen">
             <div class="head-wrapper">
                 <div class="menu-btn">
-                    <span class="material-symbols-outlined">
-                        sort
-                    </span>
+                    <i class='bx bx-menu-alt-left'></i>
                 </div>
                 <div class="welcome">
                     <div class="content">
@@ -30,15 +28,124 @@
                     </div>
                 </div>
             </div>
-                   <!-- ====CATEGORIES===== -->
-                <section class="categories-wrapper">
-                       <div class="categories">
-                        <div class="category">
-                            hi 
+            <!-- ====CATEGORIES===== -->
+            <section class="categories-wrapper">
+                <div class="categories">
+                    <div class="category">
+                        <div class="left">
+                            <img src="images/user-1.jpg" alt="">
+                            <div class="content">
+                                <h2>Personal</h2>
+                                <p>5 Tasks</p>
+                            </div>
+                            <div class="options">
+                                <div class="toggle-btn">
+                                    <i class='bx bx-dots-vertical-rounded'></i>
+                                </div>
+                            </div>
                         </div>
-                       </div>
-                </section>
-            </div>
+                    </div>
+                    <div class="category">
+                        <div class="left">
+                            <img src="images/briefcase.jpg" alt="">
+                            <div class="content">
+                                <h2>Work</h2>
+                                <p>5 Tasks</p>
+                            </div>
+                            <div class="options">
+                                <div class="toggle-btn">
+                                    <i class='bx bx-dots-vertical-rounded'></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="category">
+                        <div class="left">
+                            <img src="images/shopping-bag.jpg" alt="">
+                            <div class="content">
+                                <h2>Shopping</h2>
+                                <p>5 Tasks</p>
+                            </div>
+                            <div class="options">
+                                <div class="toggle-btn">
+                                    <i class='bx bx-dots-vertical-rounded'></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="category">
+                        <div class="left">
+                            <img src="images/coding.jpg" alt="">
+                            <div class="content">
+                                <h2>Coding</h2>
+                                <p>5 Tasks</p>
+                            </div>
+                            <div class="options">
+                                <div class="toggle-btn">
+                                    <i class='bx bx-dots-vertical-rounded'></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="category">
+                        <div class="left">
+                            <img src="images/health.jpg" alt="">
+                            <div class="content">
+                                <h2>Health</h2>
+                                <p>5 Tasks</p>
+                            </div>
+                            <div class="options">
+                                <div class="toggle-btn">
+                                    <i class='bx bx-dots-vertical-rounded'></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="category">
+                        <div class="left">
+                            <img src="images/fitness.jpg" alt="">
+                            <div class="content">
+                                <h2>Fitness</h2>
+                                <p>5 Tasks</p>
+                            </div>
+                            <div class="options">
+                                <div class="toggle-btn">
+                                    <i class='bx bx-dots-vertical-rounded'></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="category">
+                        <div class="left">
+                            <img src="images/education.jpg" alt="">
+                            <div class="content">
+                                <h2>Education</h2>
+                                <p>5 Tasks</p>
+                            </div>
+                            <div class="options">
+                                <div class="toggle-btn">
+                                    <i class='bx bx-dots-vertical-rounded'></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="category">
+                        <div class="left">
+                            <img src="images/finance.jpg" alt="">
+                            <div class="content">
+                                <h2>Finance</h2>
+                                <p>5 Tasks</p>
+                            </div>
+                            <div class="options">
+                                <div class="toggle-btn">
+                                    <i class='bx bx-dots-vertical-rounded'></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
         </div>
 
     </section>
