--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     </div>
                 </div>
             </div>
+
             <!-- ====CATEGORIES===== -->
             <section class="categories-wrapper">
                 <div class="categories">
@@ -145,32 +146,18 @@
                     </div>
                 </div>
             </section>
-        </div>
-        </div>
+
+            <!-- ====TASKS SCREEN==== -->
+             <section class="screen category-screen">
+             category 
+
+             </section>
+
+
+
+
 
     </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <script src="script.js"></script>
 </body>
 
