--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@
                                 </span>
                                 <p>Hello there</p>
                             </label>
+                            <div class="delete">
+                                <i class='bx bx-trash'></i>
+                            </div>
                         </div>
                     </div>
                 </div>
