--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="category">
+                     <div class="category">
                         <div class="left">
                             <img src="images/briefcase.jpg" alt="">
                             <div class="content">
@@ -144,7 +144,7 @@
                             </div>
                         </div> 
                     </div>
-                </div> -->
+                </div> 
             </section>
 
             <!-- ====TASKS SCREEN==== -->
@@ -159,30 +159,35 @@
                 </div>
             </section>
             <div class="category-details">
-                    <img src="images/user-1.jpg" alt="">
-                    <div class="details">
-                        <h2>Personal</h2> 
-                        <p>5 Tasks</p>
-                    </div>
+                <img src="images/user-1.jpg" alt="">
+                <div class="details">
+                    <h2>Personal</h2>
+                    <p>5 Tasks</p>
                 </div>
-                <div class="tasks-wrapper">
-                    <div class="tasks">
-                        <div class="task-wrapper">
-                            <label for="task" class="task">
-                                <input type="checkbox" name="" id="task">
-                                <span class="checkmark">
-                                    <i class='bx bx-check'></i>
-                                </span>
-                                <p>Hello there</p>
-                            </label>
-                            <div class="delete">
-                                <i class='bx bx-trash'></i>
-                            </div>
+            </div>
+            <div class="tasks-wrapper">
+                <div class="tasks">
+                    <div class="task-wrapper">
+                        <label for="task" class="task">
+                            <input type="checkbox" name="" id="task">
+                            <span class="checkmark">
+                                <i class='bx bx-check'></i>
+                            </span>
+                            <p>Hello there</p>
+                        </label>
+                        <div class="delete">
+                            <i class='bx bx-trash'></i>
                         </div>
                     </div>
                 </div>
-
             </div>
+        </div>
+        
+            <div class="add-task-btn">
+                <i class='bx bx-plus'></i>
+            </div>
+        
+
 
 
     </section>
