--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             </div>
                         </div>
                     </div>
-                     <div class="category">
+                     <!-- <div class="category">
                         <div class="left">
                             <img src="images/briefcase.jpg" alt="">
                             <div class="content">
@@ -143,7 +143,7 @@
                                 </div>
                             </div>
                         </div> 
-                    </div>
+                    </div> -->
                 </div> 
             </section>
 
@@ -182,12 +182,25 @@
                 </div>
             </div>
         </div>
-        
+
+        <!--==== ADD TASK BTN ==== -->
             <div class="add-task-btn">
                 <i class='bx bx-plus'></i>
             </div>
-        
+           <!-- TASK FORM -->
 
+        <div class="add-task">
+            <h2 class="heading">Add Task</h2>
+            <div class="input-group">
+                <label for="task-input">Tasks</label>
+                <input type="text" id="task-input" required>
+            </div>
+            <div class="input-group">
+                <label for="category-select">Category</label>
+                <select name="" id="category-select">
+                    <option value="personal">Personal</option>
+            </div>
+        </div>
 
 
     </section>
