--- a/index.html
+++ b/index.html
@@ -187,9 +187,11 @@
             <div class="add-task-btn">
                 <i class='bx bx-plus'></i>
             </div>
+            <!-- Backdrop -->
+             <div class="black-backdrop"></div>
            <!-- TASK FORM -->
-
         <div class="add-task">
+            <div class="add-task-backdrop"></div>
             <h2 class="heading">Add Task</h2>
             <div class="input-group">
                 <label for="task-input">Tasks</label>
@@ -199,6 +201,11 @@
                 <label for="category-select">Category</label>
                 <select name="" id="category-select">
                     <option value="personal">Personal</option>
+                </select>
+            </div>
+            <div class="btns">
+                <button class="cancel-btn">Cancel</button>
+                <button class="add-btn">Add</button>
             </div>
         </div>
 
