--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section class="wrapper show-categoy">
+    <section class="wrapper">
         <div class="screen-backdrop"></div>
         <div class="screen home-screen">
             <div class="head-wrapper">
