--- a/index.html
+++ b/index.html
@@ -33,118 +33,21 @@
             <section class="categories-wrapper">
                 <div class="categories">
                     <div class="category">
-                        <div class="left">
-                            <img src="images/user-1.jpg" alt="">
-                            <div class="content">
-                                <h2>Personal</h2>
-                                <p>5 Tasks</p>
-                            </div>
-                            <div class="options">
-                                <div class="toggle-btn">
-                                    <i class='bx bx-dots-vertical-rounded'></i>
+                        <div class="category">
+                            <!-- <div class="left">
+                                <img src="images/user-1.jpg" alt="">
+                                <div class="content">
+                                    <h2>Personal</h2>
+                                    <p>5 Tasks</p>
                                 </div>
-                            </div>
-                        </div>
+                                <div class="options">
+                                    <div class="toggle-btn">
+                                        <i class='bx bx-dots-vertical-rounded'></i>
+                                    </div>
+                                </div>
+                            </div> -->
+                        <!-- </div> -->
                     </div>
-                     <!-- <div class="category">
-                        <div class="left">
-                            <img src="images/briefcase.jpg" alt="">
-                            <div class="content">
-                                <h2>Work</h2>
-                                <p>5 Tasks</p>
-                            </div>
-                            <div class="options">
-                                <div class="toggle-btn">
-                                    <i class='bx bx-dots-vertical-rounded'></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="category">
-                        <div class="left">
-                            <img src="images/shopping-bag.jpg" alt="">
-                            <div class="content">
-                                <h2>Shopping</h2>
-                                <p>5 Tasks</p>
-                            </div>
-                            <div class="options">
-                                <div class="toggle-btn">
-                                    <i class='bx bx-dots-vertical-rounded'></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="category">
-                        <div class="left">
-                            <img src="images/coding.jpg" alt="">
-                            <div class="content">
-                                <h2>Coding</h2>
-                                <p>5 Tasks</p>
-                            </div>
-                            <div class="options">
-                                <div class="toggle-btn">
-                                    <i class='bx bx-dots-vertical-rounded'></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="category">
-                        <div class="left">
-                            <img src="images/health.jpg" alt="">
-                            <div class="content">
-                                <h2>Health</h2>
-                                <p>5 Tasks</p>
-                            </div>
-                            <div class="options">
-                                <div class="toggle-btn">
-                                    <i class='bx bx-dots-vertical-rounded'></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="category">
-                        <div class="left">
-                            <img src="images/fitness.jpg" alt="">
-                            <div class="content">
-                                <h2>Fitness</h2>
-                                <p>5 Tasks</p>
-                            </div>
-                            <div class="options">
-                                <div class="toggle-btn">
-                                    <i class='bx bx-dots-vertical-rounded'></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="category">
-                        <div class="left">
-                            <img src="images/education.jpg" alt="">
-                            <div class="content">
-                                <h2>Education</h2>
-                                <p>5 Tasks</p>
-                            </div>
-                            <div class="options">
-                                <div class="toggle-btn">
-                                    <i class='bx bx-dots-vertical-rounded'></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="category">
-                        <div class="left">
-                            <img src="images/finance.jpg" alt="">
-                            <div class="content">
-                                <h2>Finance</h2>
-                                <p>5 Tasks</p>
-                            </div>
-                            <div class="options">
-                                <div class="toggle-btn">
-                                    <i class='bx bx-dots-vertical-rounded'></i>
-                                </div>
-                            </div>
-                        </div> 
-                    </div> -->
-                </div> 
             </section>
 
             <!-- ====TASKS SCREEN==== -->
@@ -184,12 +87,12 @@
         </div>
 
         <!--==== ADD TASK BTN ==== -->
-            <div class="add-task-btn">
-                <i class='bx bx-plus'></i>
-            </div>
-            <!-- Backdrop -->
-             <div class="black-backdrop"></div>
-           <!-- TASK FORM -->
+        <div class="add-task-btn">
+            <i class='bx bx-plus'></i>
+        </div>
+        <!-- Backdrop -->
+        <div class="black-backdrop"></div>
+        <!-- TASK FORM -->
         <div class="add-task">
             <div class="add-task-backdrop"></div>
             <h2 class="heading">Add Task</h2>
