--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="categories">
                     <div class="category">
                         <div class="category">
-                            <!-- <div class="left">
+                            <div class="left">
                                 <img src="images/user-1.jpg" alt="">
                                 <div class="content">
                                     <h2>Personal</h2>
@@ -45,9 +45,10 @@
                                         <i class='bx bx-dots-vertical-rounded'></i>
                                     </div>
                                 </div>
-                            </div> -->
-                        <!-- </div> -->
+                            </div>
+                        </div>
                     </div>
+                </div>
             </section>
 
             <!-- ====TASKS SCREEN==== -->
