--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                                 <h2>Personal</h2>
                                 <p>5 Tasks</p>
                             </div>
+                        </div>
                             <div class="options">
                                 <div class="toggle-btn">
                                     <i class='bx bx-dots-vertical-rounded'></i>
