--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
 
-            <!-- ====CATEGORIES===== -->
+            <!-- ====CATEGORIES==== -->
             <section class="categories-wrapper">
                 <div class="categories">
                     <div class="category">
