--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                             <div class="content">
                                 <h2>Personal</h2>
                                 <p>5 Tasks</p>
-                            </div> 
-                        </div> 
+                            </div>
+                        </div>
                         <div class="options">
                             <div class="toggle-btn">
                                 <i class='bx bx-dots-vertical-rounded'></i>
@@ -47,7 +47,6 @@
                         </div>
                     </div>
                 </div>
-
             </section>
 
             <!-- ====TASKS SCREEN==== -->
@@ -61,9 +60,8 @@
                     </div>
                 </div>
             </section>
-
             <div class="category-details">
-                <img src="images/user-1.jpg" alt="">
+                <img src="images/user-1.jpg" alt="category-img">
                 <div class="details">
                     <p>5 Tasks</p>
                     <h2>Personal</h2>
