--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <section class="categories-wrapper">
                 <div class="categories">
                     <div class="category">
-                        <!-- <div class="left">
+                        <div class="left">
                             <img src="images/user-1.jpg" alt="">
                             <div class="content">
                                 <h2>Personal</h2>
@@ -44,7 +44,7 @@
                             <div class="toggle-btn">
                                 <i class='bx bx-dots-vertical-rounded'></i>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </section>
