--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
             <section class="categories-wrapper">
                 <div class="categories">
                     <div class="category">
-                        <div class="left">
+                        <!-- <div class="left">
                             <img src="images/user-1.jpg" alt="">
                             <div class="content">
                                 <h2>Personal</h2>
                                 <p>5 Tasks</p>
                             </div>
-                        </div>
-                        <div class="options">
+                        </div> -->
+                        <!-- <div class="options">
                             <div class="toggle-btn">
                                 <i class='bx bx-dots-vertical-rounded'></i>
                             </div>
-                        </div>
-                    </div>
+                        </div> -->
+                    <!-- </div> -->
                 </div>
             </section>
             
@@ -64,8 +64,8 @@
             <div class="category-details">
                 <img src="images/user-1.jpg" alt="category-img">
                 <div class="details">
-                    <p>5 Tasks</p>
-                    <h2>Personal</h2>
+                    <p class="category-tasks">5 Tasks</p>
+                    <h2 class="category-title">Personal</h2>
                 </div>
             </div>
 
