--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </section>
             
             <!-- ====TASKS SCREEN==== -->
-            <!-- <section class="screen category-screen">
+             <section class="screen category-screen">
                 <div class="head-wrapper">
                     <div class="back-btn">
                         <i class='bx bx-arrow-back'></i>
@@ -59,7 +59,7 @@
                         <i class='bx bx-dots-vertical-rounded'></i>
                     </div>
                 </div>    
-            </section> -->
+            </section> 
             
             <div class="category-details">
                 <img src="images/user-1.jpg" alt="category-img">
