--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="welcome">
                     <div class="content">
                         <h1>Hello There</h1>
-                        <p>Today you have .... tasks</p>
+                        <p>Today you have <span class="totalTask">5</span></p>
                     </div>
                     <div class="img">
                         <img src="images/admin.jpg" alt="">
