I have made some changes to some files.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </section>
             
             <!-- ====TASKS SCREEN==== -->
-            <!-- <section c lass="screen category-screen">
+            <section class="screen category-screen">
                 <div class="head-wrapper">
                     <div class="back-btn">
                         <i class='bx bx-arrow-back'></i>
@@ -61,7 +61,7 @@
                         <i class='bx bx-dots-vertical-rounded'></i>
                     </div>
                 </div>
-            </section> -->
+            </section> 
 
             <div class="category-details">
                 <img src="images/user-1.jpg" alt="category-img">
@@ -98,7 +98,7 @@
         <div class="black-backdrop"></div>
         <!-- TASK FORM -->
         <div class="add-task">
-            <div class="add-task-backdrop"></div>
+            <!-- <div class="add-task-backdrop"></div> -->
             <h2 class="heading">Add Task</h2>
             <div class="input-group">
                 <label for="task-input">Tasks</label>
@@ -115,7 +115,6 @@
                 <button class="add-btn">Add</button>
             </div>
         </div>
-
     </section>
 
     <script src="script.js"></script>
