--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Super to-do list</title>
+    <title>Todo List Apps</title>
 </head>
 
 <body>
-
     <section class="wrapper show-category">
         <div class="screen-backdrop"></div>
         <div class="screen home-screen">
@@ -22,7 +21,7 @@
                 <div class="welcome">
                     <div class="content">
                         <h1>Hello There</h1>
-                        <p>Today you have <span class="totalTask">5</span></p>
+                        <p>Today you have <span class="totalTask">5</span>tasks</p>
                     </div>
                     <div class="img">
                         <div class="backdrop"></div>
@@ -30,12 +29,11 @@
                     </div>
                 </div>
             </div>
-
-            <!-- ====CATEGORIES==== -->
+            <!-- categories section -->
             <section class="categories-wrapper">
                 <div class="categories">
-                    <div class="category">
-                        <div class="left">
+                    <!-- <div class="category"> -->
+                    <!-- <div class="left">
                             <img src="images/user-1.jpg" alt="">
                             <div class="content">
                                 <h2>Personal</h2>
@@ -46,22 +44,21 @@
                             <div class="toggle-btn">
                                 <i class='bx bx-dots-vertical-rounded'></i>
                             </div>
-                        </div>
-                    </div>
+                        </div> -->
+                    <!-- </div> -->
                 </div>
             </section>
-            
-            <!-- ====TASKS SCREEN==== -->
-            <section class="screen category-screen">
-                <div class="head-wrapper">
-                    <div class="back-btn">
-                        <i class='bx bx-arrow-back'></i>
-                    </div>
-                    <div class="options">
-                        <i class='bx bx-dots-vertical-rounded'></i>
-                    </div>
+        </div>
+
+        <section class="screen category-screen">
+            <div class="head-wrapper">
+                <div class="back-btn">
+                    <i class='bx bx-arrow-back'></i>
                 </div>
-            </section> 
+                <div class="options">
+                    <i class='bx bx-dots-vertical-rounded'></i>
+                </div>
+            </div>
 
             <div class="category-details">
                 <img src="images/user-1.jpg" alt="category-img">
@@ -87,18 +84,17 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <!--==== ADD TASK BTN ==== -->
+        <!-- Add Task Btn -->
         <div class="add-task-btn">
             <i class='bx bx-plus'></i>
         </div>
-
         <!-- Backdrop -->
         <div class="black-backdrop"></div>
-        <!-- TASK FORM -->
+        <!-- Add Task From -->
         <div class="add-task">
-            <!-- <div class="add-task-backdrop"></div> -->
+            <div class="add-task-backdrop"></div>
             <h2 class="heading">Add Task</h2>
             <div class="input-group">
                 <label for="task-input">Tasks</label>
@@ -115,8 +111,8 @@
                 <button class="add-btn">Add</button>
             </div>
         </div>
-    </section>
 
+    </section>
     <script src="script.js"></script>
 </body>
 
