I have made some changes to some files.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <!-- categories section -->
             <section class="categories-wrapper">
                 <div class="categories">
-                    <!-- <div class="category"> -->
-                    <!-- <div class="left">
+                    <!-- <div class="category">
+                    <div class="left">
                             <img src="images/user-1.jpg" alt="">
                             <div class="content">
                                 <h2>Personal</h2>
@@ -44,9 +44,9 @@
                             <div class="toggle-btn">
                                 <i class='bx bx-dots-vertical-rounded'></i>
                             </div>
-                        </div> -->
-                    <!-- </div> -->
-                </div>
+                        </div> 
+                    </div>
+                </div> -->
             </section>
         </div>
 
