I have made some changes to some files.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
 
             <div class="category-details">
-                <img src="images/user-1.jpg" alt="category-img">
+                <img src="images/user-1.jpg" alt="" id="category-img">
                 <div class="details">
                     <p class="category-tasks">5 Tasks</p>
                     <h2 class="category-title">Personal</h2>
@@ -80,7 +80,7 @@
                         </label>
                         <div class="delete">
                             <i class='bx bx-trash'></i>
-                        </div>
+                      </div>
                     </div>
                 </div>
             </div>
