I have made some changes to some files.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="welcome">
                     <div class="content">
                         <h1>Hello There</h1>
-                        <p>Today you have <span class="totalTask">5</span>tasks</p>
+                        <p>Today you have <span class="totalTasks">5</span>tasks</p>
                     </div>
                     <div class="img">
                         <div class="backdrop"></div>
@@ -32,8 +32,8 @@
             <!-- categories section -->
             <section class="categories-wrapper">
                 <div class="categories">
-                    <!-- <div class="category">
-                    <div class="left">
+                    <!-- <div class="category"> -->
+                    <!-- <div class="left">
                             <img src="images/user-1.jpg" alt="">
                             <div class="content">
                                 <h2>Personal</h2>
