--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <section class="categories-wrapper">
                 <div class="categories">
                     <!-- <div class="category"> -->
-                    <!-- <div class="left">
+                    <!-- < <div class="left">
                             <img src="images/user-1.jpg" alt="">
                             <div class="content">
                                 <h2>Personal</h2>
